chore(core): 整体重构框架核心